[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/enemies sprites/slime/slime_walk_anim_strip_15.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Enemy/Slime.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Overlap/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Overlap/Hitbox.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="Animation" id=2]
length = 1.4
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1.1, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_airborne_false"
}, {
"args": [  ],
"method": "set_airborne_true"
}, {
"args": [  ],
"method": "set_airborne_false"
}, {
"args": [  ],
"method": "restart_motion"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hurtbox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.7, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ), Vector2( 0, -7 ), Vector2( 0, -10 ), Vector2( 0, -13 ), Vector2( 0, -9 ), Vector2( 0, -8 ), Vector2( 0, -6 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 6 )

[node name="Slime" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 17
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 1 )
hframes = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Move = SubResource( 2 )

[node name="RoombaRaycast" type="RayCast2D" parent="."]
position = Vector2( 7, -10 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -6 )
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 5 )]

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -6 )
shape = SubResource( 4 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
